api create vote
