# public/swagger/users/Register.yaml
@@ -39,58 +39,30 @@ post:
             type: object
           examples:
             error:
-              code: 422
+              code: 4220
               message: The given data was invalid
               errors:
-                type: object
-                email:
-                  type: array
-                  items:
-                    type: string
-                  example:
-                    email: [
-                        The email field is required,
-                        Email must not be less than 10 characters,
-                        Email must not be longer than 254 characters
-                          The email has already been taken.
-                    ]
-                password:
-                  type: array
-                  items:
-                    type: string
-                  example:
-                    password: [
-                        The newPassword field is required,
-                        newPassword must not be less than 6 characters,
-                        newPassword must not be longer than 64 characters
-                          The newPassword field is required when confirmPassword is present.
-                    ]
-                confirmPassword:
-                  type: array
-                  items:
-                    type: string
-                  example:
-                    confirmPassword: [
-                        The confirmPassword field is required,
-                        confirmPassword must not be less than 6 characters,
-                        confirmPassword must not be longer than 64 characters
-                    ]
-                full_name:
-                  type: array
-                  items:
-                    type: string
-                  example:
-                    full_name: [
-                        The full_name field is required,
-                    ]
-                name:
-                  type: array
-                  items:
-                    type: string
-                  example:
-                    name: [
-                        The name field is required,
-                    ]
+                email: [
+                    The email field is required,
+                    Email must not be less than 10 characters,
+                    Email must not be longer than 254 characters
+                      The email has already been taken.
+                ]
+                password: [
+                    The newPassword field is required,
+                    newPassword must not be less than 6 characters,
+                    newPassword must not be longer than 64 characters
+                      The newPassword field is required when confirmPassword is present.
+                ]
+                confirmPassword: [
+                    The confirmPassword field is required,
+                    confirmPassword must not be less than 6 characters,
+                    confirmPassword must not be longer than 64 characters
+                ]
+                fullName: [
+                    The fullName field is required,
+                    FullName must not be longer than 50 characters
+                ]
     500:
       description: Server error
       $ref: ../common/ServerError.yaml
